fix: set proper form-control bg in dark mode

--- a/scss/configuration/_colors-dark.scss
+++ b/scss/configuration/_colors-dark.scss
@@ -1,3 +1,4 @@
 @use "colors";
 
 $body-color-dark: colors.$gray-300;
+$input-bg-dark: colors.$gray-900;
